--- a/InterviewProject/InterviewProject.csproj
+++ b/InterviewProject/InterviewProject.csproj
@@ -119,6 +119,7 @@
   <ItemGroup>
     <Content Include="Default.aspx" />
     <Content Include="Global.asax" />
+    <Content Include="s3files\fileToUploadToS3.xml" />
     <Content Include="scripts\ai.0.22.9-build00167.js" />
     <Content Include="scripts\ai.0.22.9-build00167.min.js" />
     <Content Include="Web.config" />
